fix: category options wrap for responsiveness

--- a/src/styles/CategorySelector.module.scss
+++ b/src/styles/CategorySelector.module.scss
@@ -23,8 +23,9 @@
     }
     .options {
         width: 100%;
-        max-width: 1000px;
+        max-width: 1200px;
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
     }
 }
